--- a/hipa/css/styles.css
+++ b/hipa/css/styles.css
@@ -10952,7 +10952,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
+  background-image: url("../assets/img/header2-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
